# tradutor-libras

./: .gitignore  README.md  Spacefile  app.py  main.py  pyproject.toml
model/keypoint_classifier/: hand_sign - Copia.csv  hand_sign.csv  hand_sign.hdf5  hand_sign.tflite  hand_sign_a.csv  hand_sign_b.csv  hand_sign_c.csv  hand_sign_d.csv  hand_sign_e.csv  hand_sign_f.csv  hand_sign_g.csv  hand_sign_i.csv  hand_sign_j.csv  hand_sign_l.csv  hand_sign_m.csv  hand_sign_n.csv  hand_sign_o.csv  hand_sign_p.csv  hand_sign_q.csv  hand_sign_r.csv  hand_sign_s.csv  hand_sign_t.csv  hand_sign_u.csv  hand_sign_v.csv  hand_sign_w.csv  hand_sign_y.csv  hand_sign_z.csv  keypoint_classifier.py  treino_letras_estaticas.ipynb
model/point_history_classifier/: hand_sign_history.csv  hand_sign_history.hdf5  hand_sign_history.tflite  hand_sign_history_label.csv  point_history_classifier.py  treino_letras_dinamicas.ipynb
templates/: about.html  index.html
templates/static/: script.js  style.css
utils/: data_collection.py  opencv_transformations.py
