[tool.poetry]
name = "libras-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-socketio = "^5.10.0"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
opencv-python = "^4.8.1.78"
gevent = "^23.9.1"
imutils = "^0.5.4"
pillow = "^10.1.0"
eventlet = "^0.33.3"
mediapipe = "0.10.7"
tensorflow = "2.15.0rc1"
debugpy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
